<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:background="@color/colorPrimaryDark"
    tools:context="com.amyhill.simon.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_textview"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:fontFamily="casual"
            android:textSize="70sp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorText"
            android:layout_marginTop="30dp" />

        <com.amyhill.simon.ColorButton
            android:text="@string/play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/play_button"
            android:textColor="@color/colorText"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="0dp"
            android:fontFamily="casual"
            android:textSize="30sp"/>

        <com.amyhill.simon.ColorButton
            android:text="@string/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ins_button"
            android:textColor="@color/colorText"
            android:layout_marginBottom="20dp"
            android:fontFamily="casual"
            android:textSize="30sp"/>

        <com.amyhill.simon.ColorButton
            android:text="@string/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_button"
            android:textColor="@color/colorText"
            android:layout_marginBottom="20dp"
            android:fontFamily="casual"
            android:textSize="30sp"/>

        <com.amyhill.simon.ColorButton
            android:text="@string/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exit_button"
            android:textColor="@color/colorText"
            android:layout_marginBottom="20dp"
            android:fontFamily="casual"
            android:textSize="30sp" />
    </LinearLayout>

</RelativeLayout>
